[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/soldier.png" type="Texture" id=2]
[ext_resource path="res://environment/lightmasks/testtorchmask1.png" type="Texture" id=5]
[ext_resource path="res://weapons/WeaponController.gd" type="Script" id=6]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 17.5658, -6.64151 )
texture = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 50.9887, 0.372604 )

[node name="Pivot" type="Position2D" parent="."]

[node name="CameraOffset" type="Position2D" parent="Pivot"]
position = Vector2( 137.27, -0.307144 )

[node name="Camera2D" type="Camera2D" parent="Pivot/CameraOffset"]
current = true
smoothing_enabled = true

[node name="TorchLight" type="Light2D" parent="."]
position = Vector2( 3.163, -5.726 )
scale = Vector2( 23.3, 23.3 )
texture = ExtResource( 5 )
offset = Vector2( 20.6, 0 )
texture_scale = 0.02
energy = 1.2
mode = 2
shadow_enabled = true
shadow_color = Color( 0.992157, 0.988235, 0.988235, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10.7689, 4.63358, -1.05363, -27.2233, 22.2177, -23.1565, 37.3554, -8.24474, 45.2632, 0.566742, 8.20973, 14.8007, -3.9908, 12.7673 )

[node name="WeaponController" type="Node2D" parent="."]
script = ExtResource( 6 )
[connection signal="ammo_change" from="WeaponController" to="." method="_on_WeaponController_ammo_change"]
[connection signal="reload" from="WeaponController" to="." method="_on_WeaponController_reload"]
[connection signal="spread_change" from="WeaponController" to="." method="_on_WeaponController_spread_change"]
